Fix text-alignment in about page

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -245,6 +245,15 @@ hr{
 }
 
 
+.about-cissa {
+  width:80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.cissa-intro {
+  padding-right: 5%;
+}
 
 .team-section {
   text-align:center;
